compiler/staqex/parser.py
"""Staqex recursive-descent Parser (Phase 2.1 subset)."""

from __future__ import annotations

from .ast_nodes import (
    AssignStmt,
    Attr,
    BinOp,
    BinderOrigin,
    Block,
    BlockExpr,
    Call,
    ClassDecl,
    Coin,
    CompilationUnit,
    Dirac,
    DiscretizationBridgeDecl,
    DiscretizationDecl,
    DynamicQpuStmt,
    EnumDecl,
    MatchArm,
    MatchStmt,
    ResetStmt,
    ExperimentDecl,
    EvolveBody,
    EvolveExpr,
    Expr,
    ExprStmt,
    FieldDecl,
    ForEachStmt,
    FunDecl,
    ImportDecl,
    ImplDecl,
    Inspect,
    Hole,
    H1BasisDecl,
    H1CoordinateDecl,
    H1Evolve,
    H1CoherentControl,
    H1DynamicControl,
    H1Measure,
    H1Mixture,
    H1Observable,
    H1OperatorDecl,
    H1ParameterDecl,
    H1Prepare,
    H1RealizeDecl,
    H1Superposition,
    H1TraceOut,
    H1Uncompute,
    InterfaceDecl,
    IndexDomain,
    BraLit,
    KetLit,
    Lambda,
    ListExpr,
    LetBind,
    LitBool,
    LitFloat,
    LitInt,
    LitString,
    MeasureExpr,
    MainDecl,
    Measure,
    ModuleInfoDecl,
    NamespaceDecl,
    OpBin,
    OpBinder,
    OpCall,
    OpIndexed,
    OpLit,
    OpNumber,
    OpQuadrature,
    OpGridQuad,
    OpHop,
    OpPauli,
    OpPow,
    OpVar,
    OpAttr,
    PackageDecl,
    Param,
    Pipe,
    ReturnStmt,
    RevDomain,
    Snapshot,
    ScientificScopeDecl,
    Span,
    KetSumBinder,
    NormExpr,
    SetComprehension,
    SetPowerDomain,
    StateBind,
    StructDecl,
    SuzukiPolicy,
    TensorExpr,
    TupleExpr,
    TypeRef,
    TheoryDecl,
    UnitConvert,
    Vacuum,
    Var,
    WhenArm,
    WhenExpr,
    SuperposeArm,
    SuperposeExpr,
)
from .tokens import Token, TokenKind
from .scientific_vocabulary import (
    SCIENTIFIC_NAME_ALIASES,
    normalize_algebra_name,
    normalize_scientific_name,
)


class ParseError(Exception):
    def __init__(
        self,
        message: str,
        line: int,
        col: int,
        *,
        code: str = "PARSE_ERROR",
    ) -> None:
        super().__init__(message)
        self.line = line
        self.col = col
        self.message = message
        self.code = code


def _flatten_namespaces(decls: list) -> list:
    """Expand `namespace A.B { class C … }` → ClassDecl(namespace=[A,B], name=C)."""
    out: list = []
    for d in decls:
        if isinstance(d, NamespaceDecl):
            for inner in _flatten_namespaces(d.decls):
                if isinstance(inner, (ClassDecl, FunDecl, EnumDecl, StructDecl)):
                    inner.namespace = list(d.path) + list(inner.namespace)
                    out.append(inner)
                else:
                    out.append(inner)
        else:
            out.append(d)
    return out


# Names the Operator-DSL parser (_op_expression / _op_primary) reserves for
# itself: `sum`/`product` binders and the Pauli/hop atoms. An `Operator`
# bind's factory-call heuristic must never treat these as an ordinary
# function call, even when immediately followed by `(` (LISS-0051).
_OPERATOR_DSL_RESERVED_ATOMS = {"Sigma", "Pi", "ForAll", "Min", "adjoint", "I", "X", "Y", "Z", "hop"}
# Algebra Calls that must parse as expression `Call` under `Operator … =`
# (LISS-0207): reserved OpDSL atoms would otherwise become `OpCall` and lose
# qubit domain when rebound through bare `Operator`.
_ALGEBRA_EXPR_CALLEES = frozenset({
    "adjoint",
    "commutator",
    "anticommutator",
    "inner",
    "outer",
    "projector",
})
_SUPPORTED_SOURCE_VERSIONS = frozenset({"1.0"})


class Parser:
    def __init__(
        self,
        tokens: list[Token],
        *,
        experiment_profile: bool = False,
    ) -> None:
        self.tokens = tokens
        self.i = 0
        self.diagnostics: list[dict] = []
        self._prev: Token | None = None
        # ADR 0176: short experiment surface (optional package + bare main body).
        self.experiment_profile = experiment_profile
        # Resolve reserved operator-looking calls against the complete source
        # declaration set.  A user callable named `Z` must remain a callable;
        # only an unresolved `Z(0)` is retired operator-index syntax.
        self._function_names = {
            tokens[index + 1].lexeme
            for index, token in enumerate(tokens[:-1])
            if token.kind == TokenKind.FUN
            and tokens[index + 1].kind == TokenKind.IDENT
        }
        # LISS-0073 Slice F: Operator-context `[A, B]` → commutator (not ListExpr).
        self._commutator_bracket_context = False
        # LISS-0426: depth counter so `_logical_or` doesn't greedily
        # consume `||...||`'s own closing delimiter as a binary `||` --
        # a State-typed norm argument never legitimately needs boolean
        # `||` inside it, so this suppresses binary-`||` matching only
        # while parsing between an unclosed pair.
        self._norm_bars_depth = 0
        # ADR 0189: aliases become canonical only after a quantum-state bind;
        # ordinary/type-first names and Dirac paper labels keep source spelling.
        self._scientific_bindings: dict[str, str] = {}

    def parse(self) -> CompilationUnit:
        start = self._span()
        package = None
        source_version = None
        imports: list[ImportDecl] = []
        decls: list = []
        main: MainDecl | None = None
        profile_main_stmts: list = []

        if self._check(TokenKind.PACKAGE):
            package = self._package()
        elif self.experiment_profile:
            from .experiment_profile import DEFAULT_EXPERIMENT_PACKAGE

            package = PackageDecl(
                path=list(DEFAULT_EXPERIMENT_PACKAGE),
                span=start,
            )

        if self._at_package_source_version():
            source_version = self._package_source_version()

        while self._check(TokenKind.IMPORT):
            imports.append(self._import())

        while not self._check(TokenKind.EOF):
            if self._check(TokenKind.IDENT) and self._peek().lexeme in {
                "theory",
                "experiment",
                "workflow",
                "execution",
                "report",
                "system",
            }:
                if (
                    self._peek().lexeme in {"theory", "experiment"}
                    and self._looks_like_h1_scope()
                ):
                    decls.append(self._h1_scope_decl())
                else:
                    decls.append(self._scientific_scope_decl())
            elif self._check(TokenKind.IDENT) and self._peek().lexeme == "realize":
                decls.append(self._h1_realize_decl())
            elif self._check(TokenKind.IDENT) and self._peek().lexeme == "discretization":
                decls.append(self._discretization_decl())
            elif self._check(TokenKind.IDENT) and self._peek().lexeme == "use":
                decls.append(self._use_decl())
            elif self._check(TokenKind.NAMESPACE):
                decls.append(self._namespace_decl())
            elif self._check(TokenKind.ENUM) or (
                self._is_visibility_start() and self._peek_after_visibility() == TokenKind.ENUM
            ):
                vis = self._parse_visibility()
                ed = self._enum_decl()
                ed.visibility = vis  # type: ignore[assignment]
                decls.append(ed)
            elif self._check(TokenKind.STRUCT) or (
                self._is_visibility_start()
                and self._peek_after_visibility() == TokenKind.STRUCT
            ):
                vis = self._parse_visibility()
                sd = self._struct_decl()
                sd.visibility = vis  # type: ignore[assignment]
                decls.append(sd)
            elif (
                self._check(TokenKind.PUBLIC)
               
                or self._check(TokenKind.PRIVATE)
                or self._check(TokenKind.FUN)
            ):
                nxt = self._peek_after_visibility()
                if nxt == TokenKind.CLASS:
                    vis = self._parse_visibility()
                    cd = self._class_decl()
                    cd.visibility = vis  # type: ignore[assignment]
                    decls.append(cd)
                elif nxt == TokenKind.ENUM:
                    vis = self._parse_visibility()
                    ed = self._enum_decl()
                    ed.visibility = vis  # type: ignore[assignment]
                    decls.append(ed)
                elif nxt == TokenKind.STRUCT:
                    vis = self._parse_visibility()
                    sd = self._struct_decl()
                    sd.visibility = vis  # type: ignore[assignment]
                    decls.append(sd)
                else:
                    fun = self._fun_decl()
                    if fun.name == "main":
                        if fun.return_type is None:
                            self.diagnostics.append(
                                {
                                    "code": "MISSING_RETURN_TYPE",
                                    "line": fun.span.line,
                                    "col": fun.span.col,
                                    "message": "`main` must declare `-> Unit`",
                                }
                            )
                        elif fun.return_type.name != "Unit":
                            self.diagnostics.append(
                                {
                                    "code": "MAIN_RETURN_TYPE_ERROR",
                                    "line": fun.span.line,
                                    "col": fun.span.col,
                                    "message": "`main` must return `Unit`",
                                }
                            )
                        if any(isinstance(stmt, ReturnStmt) for stmt in fun.body.stmts):
                            self.diagnostics.append(
                                {
                                    "code": "MAIN_RETURN_ERROR",
                                    "line": fun.span.line,
                                    "col": fun.span.col,
                                    "message": (
                                        "`main` must terminate with terminal `measure`; "
                                        "it cannot return a value"
                                    ),
                                }
                            )
                        elif fun.body.result is not None:
                            self.diagnostics.append(
                                {
                                    "code": "MAIN_RESULT_ERROR",
                                    "line": fun.span.line,
                                    "col": fun.span.col,
                                    "message": (
                                        "`main` must terminate with terminal `measure`; "
                                        "it cannot return a final expression"
                                    ),
                                }
                            )
                        if main is not None:
                            self.diagnostics.append(
                                {
                                    "code": "PARSE_ERROR",
                                    "line": fun.span.line,
                                    "col": fun.span.col,
                                    "message": "duplicate `main` entry point",
                                }
                            )
                        main = MainDecl(
                            params=fun.params,
                            body=fun.body,
                            span=fun.span,
                            return_type=fun.return_type,
                        )
                    else:
                        decls.append(fun)
            elif self._check(TokenKind.CLASS) or (
                self._is_visibility_start()
                and self._peek_after_visibility() == TokenKind.CLASS
            ):
                vis = self._parse_visibility()
                cd = self._class_decl()
                cd.visibility = vis  # type: ignore[assignment]
                decls.append(cd)
            elif self._check(TokenKind.INTERFACE):
                decls.append(self._interface_decl())
            elif self._check(TokenKind.IMPL):
                decls.append(self._impl_decl())
            elif self._is_toplevel_executable_start():
                if self.experiment_profile:
                    # ADR 0176: bare top-level statements desugar into synthetic main.
                    try:
                        profile_main_stmts.append(self._stmt())
                    except ParseError as e:
                        self.diagnostics.append(
                            {
                                "code": "PARSE_ERROR",
                                "line": e.line,
                                "col": e.col,
                                "message": e.message,
                            }
                        )
                        self._skip_until_toplevel_resync()
                else:
                    tok = self._peek()
                    self.diagnostics.append(
                        {
                            "code": "TOPLEVEL_EXECUTION_ERROR",
                            "line": tok.line,
                            "col": tok.col,
                            "message": (
                                "executable statements are forbidden at top level; "
                                "place them inside `pub fn main() -> Unit { … }` "
                                "or declare `// staqex-profile: experiment`"
                            ),
                        }
                    )
                    self._skip_until_toplevel_resync()
            elif self._check(TokenKind.FORBIDDEN) or self._check(TokenKind.RETIRED):
                self._advance()
            elif self._check(TokenKind.ERROR):
                self._advance()
            else:
                tok = self._peek()
                if tok.kind == TokenKind.EOF:
                    break
                self.diagnostics.append(
                    {
                        "code": "PARSE_ERROR",
                        "line": tok.line,
                        "col": tok.col,
                        "message": f"unexpected token `{tok.lexeme}` at top level",
                    }
                )
                self._advance()

        if profile_main_stmts:
            if main is not None:
                self.diagnostics.append(
                    {
                        "code": "PARSE_ERROR",
                        "line": profile_main_stmts[0].span.line,
                        "col": profile_main_stmts[0].span.col,
                        "message": (
                            "experiment profile: cannot mix bare top-level "
                            "statements with an explicit `main`"
                        ),
                    }
                )
            else:
                body_span = profile_main_stmts[0].span
                main = MainDecl(
                    params=[],
                    body=Block(
                        stmts=profile_main_stmts,
                        span=body_span,
                        result=None,
                    ),
                    span=body_span,
                    return_type=TypeRef(name="Unit", args=[]),
                )

        self._check_scientific_scope_graph(decls)
        if main is not None:
            self._check_scientific_bind_collisions(main.body.stmts)
        decls = _flatten_namespaces(decls)
        return CompilationUnit(
            package=package,
            imports=imports,
            decls=decls,
            main=main,
            span=start,
            source_version=source_version,
        )

    def _package_source_version(self) -> str | None:
        tok = self._peek()
        self._expect_ident_like()  # staqex_version
        self._expect(TokenKind.EQ)
        value = self._expect(TokenKind.STRING)
        version = str(value.literal)
        if version in _SUPPORTED_SOURCE_VERSIONS:
            return version
        self.diagnostics.append(self._unsupported_source_version_diag(tok.line, tok.col, version))
        return version

    def _at_package_source_version(self) -> bool:
        return self._check(TokenKind.IDENT) and self._peek().lexeme == "staqex_version"

    @staticmethod
    def _unsupported_source_version_diag(
        line: int, col: int, version: str
    ) -> dict[str, object]:
        return {
            "code": "UNSUPPORTED_QPEX_VERSION",
            "line": line,
            "col": col,
            "message": f"unsupported staqex_version `{version}`",
        }

    def _looks_like_h1_scope(self) -> bool:
        """Detect reviewed H1 markers without changing legacy scope parsing."""

        depth = 0
        for offset in range(self.i, len(self.tokens)):
            token = self.tokens[offset]
            if token.kind == TokenKind.LBRACE:
                depth += 1
            elif token.kind == TokenKind.RBRACE:
                depth -= 1
                if depth == 0:
                    break
            elif depth > 0:
                if token.lexeme in {
                    "parameter",
                    "operator",
                    "prepare",
                    "realize",
                    "State",  # LISS-0418: lowercase `state` retired
                    "Evolve",  # LISS-0419: lowercase `evolve` retired
                    "Measure",  # LISS-0419: lowercase `measure` retired
                }:
                    return True
                if (
                    token.lexeme == "observable"
                    and offset + 1 < len(self.tokens)
                    and self.tokens[offset + 1].lexeme != "="
                ):
                    return True
        return False

    def _h1_realize_decl(self) -> H1RealizeDecl:
        """Parse the top-level `realize qpu:<target>` H1 target selection."""

        start = self._span()
        self._advance()  # "realize"
        self._expect_ident_like()  # fixed "qpu" prefix
        self._expect(TokenKind.COLON)
        target = self._expect_ident_like()
        return H1RealizeDecl(target=target, span=start)

    def _legacy_parse_scientific_scope(self) -> TheoryDecl | ExperimentDecl:
        """Parse the source-preserving H1 declaration skeleton."""

        start = self._span()
        kind = self._advance().lexeme
        name = self._expect_ident_like()
        params: list[Param] = []
        if kind == "experiment" and self._match(TokenKind.LPAREN):
            while not self._check(TokenKind.RPAREN):
                param_name = self._expect_ident_like()
                if self._match(TokenKind.EQ):
                    self._advance()
                params.append(Param(name=param_name, ty=None))
                if not self._match(TokenKind.COMMA):
                    break
            self._expect(TokenKind.RPAREN)
        self._expect(TokenKind.LBRACE)
        body: list[Token] = []
        depth = 1
        while depth > 0 and not self._check(TokenKind.EOF):
            token = self._advance()
            if token.kind == TokenKind.LBRACE:
                depth += 1
            elif token.kind == TokenKind.RBRACE:
                depth -= 1
                if depth == 0:
                    break
            body.append(token)
        if kind == "theory":
            parameters, operators, basis, coordinate = self._parse_h1_theory_members(body)
            return TheoryDecl(
                name=name,
                parameters=parameters,
                operators=operators,
                span=start,
                basis=basis,
                coordinate=coordinate,
            )
        return ExperimentDecl(
            name=name,
            parameters=params,
            body=self._parse_h1_experiment_body(body),
            span=start,
        )

    _H1_THEORY_MEMBER_KEYWORDS = frozenset({"parameter", "operator", "basis", "coordinate"})

    def _parse_h1_theory_members(
        self, body: list[Token]
    ) -> tuple[
        list[H1ParameterDecl],
        list[H1OperatorDecl],
        H1BasisDecl | None,
        H1CoordinateDecl | None,
    ]:
        parameters: list[H1ParameterDecl] = []
        operators: list[H1OperatorDecl] = []
        basis: H1BasisDecl | None = None
        coordinate: H1CoordinateDecl | None = None
        index = 0
        while index < len(body):
            token = body[index]
            if token.lexeme == "parameter" and index + 3 < len(body):
                parameters.append(
                    H1ParameterDecl(
                        name=body[index + 1].lexeme,
                        ty=TypeRef(name=body[index + 3].lexeme, args=[]),
                        span=Span(line=token.line, col=token.col),
                    )
                )
                index += 4
                continue
            if token.lexeme == "operator" and index + 1 < len(body):
                operator_name = body[index + 1]
                cursor = index + 2
                operator_params: list[str] = []
                if cursor < len(body) and body[cursor].kind == TokenKind.LPAREN:
                    cursor += 1
                    while cursor < len(body) and body[cursor].kind != TokenKind.RPAREN:
                        if body[cursor].kind == TokenKind.IDENT:
                            operator_params.append(body[cursor].lexeme)
                        cursor += 1
                    cursor += 1
                while cursor < len(body) and body[cursor].kind != TokenKind.EQ:
                    cursor += 1
                if cursor < len(body):
                    cursor += 1
                expression: list[str] = []
                expression_tokens: list[Token] = []
                while (
                    cursor < len(body)
                    and body[cursor].lexeme not in self._H1_THEORY_MEMBER_KEYWORDS
                ):
                    expression.append(body[cursor].lexeme)
                    expression_tokens.append(body[cursor])
                    cursor += 1
                parsed_expression = self._parse_h1_operator_expression(expression_tokens)
                parameter_types = {
                    parameter.name: parameter.ty.name for parameter in parameters
                }
                operators.append(
                    H1OperatorDecl(
                        name=operator_name.lexeme,
                        parameters=operator_params,
                        source_tokens=tuple(expression),
                        span=Span(line=token.line, col=token.col),
                        expression=parsed_expression,
                        dimension=(
                            parameter_types[operator_params[0]]
                            if operator_params and operator_params[0] in parameter_types
                            else None
                        ),
                        parameter_types=parameter_types,
                    )
                )
                index = cursor
                continue
            if (
                token.lexeme == "basis"
                and index + 2 < len(body)
                and body[index + 2].kind == TokenKind.EQ
            ):
                name = body[index + 1].lexeme
                cursor = index + 3
                expression_tokens: list[Token] = []
                while (
                    cursor < len(body)
                    and body[cursor].lexeme not in self._H1_THEORY_MEMBER_KEYWORDS
                ):
                    expression_tokens.append(body[cursor])
                    cursor += 1
                basis = H1BasisDecl(
                    name=name,
                    expression=self._parse_h1_operator_expression(expression_tokens),
                    source_tokens=tuple(tok.lexeme for tok in expression_tokens),
                    span=Span(line=token.line, col=token.col),
                )
                index = cursor
                continue
            if token.lexeme == "coordinate" and index + 3 < len(body):
                name = body[index + 1].lexeme
                kind_name = body[index + 3].lexeme
                cursor = index + 4
                size: int | None = None
                if cursor < len(body) and body[cursor].kind == TokenKind.LT:
                    cursor += 1
                    if cursor < len(body) and body[cursor].kind == TokenKind.INT:
                        try:
                            size = int(body[cursor].lexeme)
                        except ValueError:
                            size = None
                        cursor += 1
                    while cursor < len(body) and body[cursor].kind != TokenKind.GT:
                        cursor += 1
                    if cursor < len(body):
                        cursor += 1
                coordinate = H1CoordinateDecl(
                    name=name,
                    kind=kind_name,
                    size=size,
                    span=Span(line=token.line, col=token.col),
                )
                index = cursor
                continue
            index += 1
        return parameters, operators, basis, coordinate

    def _parse_h1_operator_expression(self, tokens: list[Token]) -> object | None:
        if not tokens:
            return None
        last = tokens[-1]
        nested = Parser(
            tokens + [Token(TokenKind.EOF, "", last.line, last.col)]
        )
        try:
            expression = nested._op_expression()
        except ParseError:
            return None
        self.diagnostics.extend(nested.diagnostics)
        return expression

    def _parse_h1_experiment_body(self, body: list[Token]) -> list[object]:
        """Preserve one reviewed H1 operation per source line."""

        lines: list[list[Token]] = []
        for token in body:
            if not lines or lines[-1][0].line != token.line:
                lines.append([])
            lines[-1].append(token)
        statements: list[object] = []
        for line in lines:
            if not line:
                continue
            lexemes = tuple(token.lexeme for token in line)
            first = line[0]
            span = Span(line=first.line, col=first.col)
            if first.lexeme == "dynamic" or "dynamic" in lexemes:
                statements.append(H1DynamicControl(source_tokens=lexemes, span=span))
            elif "Mix" in lexemes:
                statements.append(H1Mixture(source_tokens=lexemes, span=span))
            elif "Superpose" in lexemes:
                statements.append(
                    H1Superposition(source_tokens=lexemes, span=span)
                )
            elif "capply" in lexemes:
                statements.append(H1CoherentControl(source_tokens=lexemes, span=span))
            elif first.lexeme == "State" or "prepare" in lexemes:
                # LISS-0418 (ADR 0191 amendment): lowercase `state` retired.
                state_name = (
                    line[1].lexeme if first.lexeme == "State" and len(line) > 1 else None
                )
                bound_to: tuple[str, str] | None = None
                if "over" in lexemes:
                    over_index = lexemes.index("over")
                    if (
                        over_index + 3 < len(lexemes)
                        and line[over_index + 2].kind == TokenKind.DOT
                    ):
                        bound_to = (lexemes[over_index + 1], lexemes[over_index + 3])
                statements.append(
                    H1Prepare(
                        source_tokens=lexemes,
                        span=span,
                        state_name=state_name,
                        bound_to=bound_to,
                    )
                )
            elif "Evolve" in lexemes:
                state_name = (
                    first.lexeme if first.kind == TokenKind.IDENT else None
                )
                theory_name = None
                if "under" in lexemes:
                    under_index = lexemes.index("under")
                    if under_index + 1 < len(lexemes):
                        theory_name = lexemes[under_index + 1]
                statements.append(
                    H1Evolve(
                        source_tokens=lexemes,
                        span=span,
                        state_name=state_name,
                        theory_name=theory_name,
                    )
                )
            elif "uncompute" in lexemes:
                statements.append(H1Uncompute(source_tokens=lexemes, span=span))
            elif "tracing_out" in lexemes:
                statements.append(H1TraceOut(source_tokens=lexemes, span=span))
            elif first.lexeme == "observable":
                statements.append(H1Observable(source_tokens=lexemes, span=span))
            elif first.lexeme == "Measure":
                statements.append(H1Measure(source_tokens=lexemes, span=span))
        return statements
